--- a/config.yml
+++ b/config.yml
@@ -1,19 +1,17 @@
-model: SAITS
+model: Lerp
 
-saving_path: ./FinalExp/mar_30/simulate/
-# saving_path: ./TestF/dclp3/
-
-is_dclp3: False
+# saving_path: ./FinalExp/mar_30/simulate/
+# saving_path: ./ModeExp/simulate/A/
+saving_path: ./ModeExp/simulate/Mixed/
+is_pedap: False
 
 device: cuda
 impute_all_sets: True
+miss_config: 'B'
 
-miss_config:
-    max_pct: 0.3
-    probs: {'mnar': -1.1, 'meal': 1.0, 'mcar': -0.1}
-
-# is_evaluate: False
+# is_evaluate: True
 # train_best: False
+
 # Data
 max_day_length: 288
 seq_len: 288
@@ -25,6 +23,7 @@ n_trials: 50
 
 # data_path: '/project/shakeri-lab/Alireza_timeseries/benchmark/datasets_processed/DCLP3/splits/dclp3_patients_70_10_20_seed42/'
 data_path: '/project/shakeri-lab/Amir/Data_Processing/Sim/sim/UVA-T1D-Simulator/TestAID/ImputationModerateConfig/'
+# data_path: '/project/shakeri-lab/Alireza_timeseries/benchmark/datasets_processed/PEDAP/splits/pedap_patients_70_10_20_seed42/'
 
 seg_path: utils/risk_matrix_seg.npy
 plot_dir: './'
